--- a/styles.css
+++ b/styles.css
@@ -156,6 +156,22 @@ label {
   font-weight: bold;
 }
 
+nav,
+.scroll,
+.header {
+    opacity: 1;
+    visibility: visible;
+    transition: all 600ms 800ms;
+}
+
+.modal--open nav,
+.modal__open .scroll,
+.modal--open .header {
+    opacity: 0;
+    visibility: hidden;
+    transition: all 400ms;
+}
+
 /* 
 
 NAVIGATION 
@@ -204,10 +220,23 @@ nav {
   width: 90%;
   max-width: 1100px;
   height: 700px;
-  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
   border-radius: 20px;
   overflow: hidden;
   display: flex;
+  visibility: hidden;
+  z-index: -1;
+  transition: visibility 1s, z-index 1s, box-shadow 0.5s ease;
+}
+
+.modal--open .modal__about, 
+.modal--open .modal__contact {
+    transform: translateX(0%);
+}
+
+.modal--open .modal{
+  z-index: 60;
+  box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
+  visibility: visible;
 }
 
 .modal__half {
@@ -217,10 +246,12 @@ nav {
   flex-direction: column;
   justify-content: center;
   position: relative;
+  transition: all 300ms ease-in;
 }
 
 .modal__about {
   background-color: rgb(245, 245, 245);
+  transform: translateX(-110%);
 }
 
 .modal__setters {
@@ -262,6 +293,7 @@ nav {
 .modal__contact {
   background-color: #242424;
   color: white;
+  transform: translateX(110%);
 }
 
 .modal__title {
@@ -311,7 +343,7 @@ nav {
   left: 0;
   width: 100%;
   height: 100%;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   z-index: -1;
@@ -353,11 +385,12 @@ nav {
 }
 
 .modal__exit:hover {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .modal__overlay--visible {
-    z-index: 1;
+  z-index: 1;
+  display: flex;
 }
 
 /* 
