--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ section {
   text-align: center;
   font-size: 48px;
   margin-bottom: 60px;
+  position: relative;
 }
 
 .title {
@@ -96,6 +97,7 @@ button {
   position: absolute;
   bottom: 32px;
   right: 40px;
+  z-index: 50;
 }
 
 .link__hover-effect {
@@ -841,6 +843,9 @@ baseline placement outline for smaller svgs
     width: 80%;
     max-width: 600px;
   }
+  .shape--3 {
+    display: none;
+  }
   .title {
     font-size: 80px;
   }
@@ -855,7 +860,6 @@ baseline placement outline for smaller svgs
     width: 100%;
     display: flex;
     flex-direction: column-reverse;
-    position: relative;
     border-radius: 0;
   }
   .modal__half {
@@ -868,12 +872,14 @@ baseline placement outline for smaller svgs
   .logo-dark {
     width: 100%;
   }
-
   .title {
     font-size: 52px;
   }
   .header__para {
     font-size: 18px;
+  }
+  .project__wrapper {
+    height: 24vh;
   }
   .project__description--para {
     display: none;
