--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,8 @@ nav,
 
 .modal--open nav,
 .modal__open .scroll,
-.modal--open .header {
+.modal--open .header
+.modal__open .mail__btn {
   opacity: 0;
   visibility: hidden;
   transition: all 400ms;
@@ -359,6 +360,7 @@ nav .row {
   overflow: hidden;
   display: flex;
   visibility: hidden;
+  opacity: 0;
   z-index: -1;
   transition: visibility 1s, z-index 1s, box-shadow 0.5s ease;
 }
@@ -372,6 +374,7 @@ nav .row {
   z-index: 60;
   box-shadow: 0 20px 80px 0 rgb(0, 0, 0, 0.55);
   visibility: visible;
+  opacity: 1;
 }
 
 .modal__half {
