--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ button {
   border: none;
   background-color: #242424;
   color: white;
-  position: absolute;
+  position: fixed;
   bottom: 32px;
   right: 40px;
   z-index: 50;
@@ -173,9 +173,9 @@ nav,
 }
 
 .modal--open nav,
-.modal__open .scroll,
+.modal--open .scroll,
 .modal--open .header
-.modal__open .mail__btn {
+.modal--open .mail__btn {
   opacity: 0;
   visibility: hidden;
   transition: all 400ms;
@@ -339,7 +339,7 @@ nav .row {
 
 */
 .modal {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -350,7 +350,6 @@ nav .row {
   overflow: hidden;
   display: flex;
   visibility: hidden;
-  opacity: 0;
   z-index: -1;
   transition: visibility 1s, z-index 1s, box-shadow 0.5s ease;
 }
@@ -854,6 +853,7 @@ baseline placement outline for smaller svgs
     display: flex;
     flex-direction: column-reverse;
     border-radius: 0;
+    position: relative;
   }
   .modal__half {
     width: 100%;
